[package]
name = "megalink-rs"
version = "0.1.0"
authors = ["Ricky Taylor <rickytaylor26@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.38"
async-trait = "0.1.42"
byteorder = "1.4.2"
clap = "3.0.0-beta.2"
env_logger = "0.8.3"
futures = "0.3.12"
log = "0.4.14"
serialport = "4.0.0"
tokio = { version = "1.1.1", features = ["full"] }
tokio-serial = "4.3.3"

[patch.crates-io]
tokio-serial = { git = 'https://github.com/CUAir/tokio-serial' }
